#47 updated most of the translations. Leftover from Config parameters

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -1,35 +1,88 @@
 {
   "phrases": {
+    "A3": "A3",
+    "A4": "A4",
     "abc Tutorial": "ABC - Einführung",
+    "Add a draggable mark": "Verschiebemarke einfügen",
+    "Add a Jump": "Sprung einfügen",
+    "Add a Jumptarget": "Sprungziel einfügen",
+    "Add a predefined annotation": "Anmerkung referenzieren",
+    "Add a shift": "Note rechts/links schieben",
+    "Add an annotation": "Anmekung hinzufügen",
+    "Add Config": "Konfig. einfügen",
+    "Add missing entries": "Fehlende Einträge einfügen",
     "All": "Alle Fenster",
+    "Annotation Ref": "Anmerkungsreferenz",
     "annotation template": "Beschriftungsvorlage",
+    "Annotation": "Anmerkung",
+    "barnumbers and countnotes": "Taknummer und Zählmarken",
     "barnumbers": "Taktnummern",
     "barnumbers.full": "Taktnummern.detail",
+    "basic settings": "Grundeinstellungen",
     "Choose extract": "Auszug wählen",
-    "configure positioning of rests\ncompatible to version 1.3": "Konfiguriert die Position\nvon Pausen wie\nbei Vesion 1.3",
+    "configure positioning of rests\ncompatible to version 1.3": "Pausen kompatibel zu version 1.3}",
     "configure your sheet": "Blatt konfigureren",
     "countnotes": "Zählmarken",
     "Create new sheet": "Neues Blatt erstellen",
     "create": "erzeugen",
+    "current extract": "aktueller Auszug",
     "Demo": "Demonstration",
+    "direction to shift the note": "Richtung, in welche die Note geschoben werden soll",
+    "direction": "Richtung",
+    "Distance for in-line from last note before variation": "Abstand der Eingangslinie von der letzten Note vor dem varianten Abschnitt",
+    "Distance for out-line from firat note after variation": "Abstand der Ausgangslinie von der ersten Note nach dem varianten Abschnitt",
+    "Distance for followup-line from first note after variation": "Abstand der Folgelinie von der ersten Note nach dem varianten Abschnitt",
+    "Dl abc": "Dl abc",
     "download abc to local system": "ABC - File herunterladen",
+    "Draggable": "Verschiebemarke",
+    "Edit addon on cursor position": "Zusatzinformation bearbeiten",
+    "Edit Addon": "Zusatz bearbeiten ",
+    "edit barnumbers or countnotes": "Taktnummern und Zählmarken bearbeiten",
+    "Edit basic settings of extract": "Grundeinstellungen bearbeiten",
+    "Edit Config": "Konfig. bearbeiten",
+    "Edit configuration with forms": "Konfiguration in Bildschirmmasken bearbeiten",
+    "Edit current extract": "Konfiguration des aktuellen Auszugs bearbeiten",
+    "edit global settings for the current song": "Globale Einstellungen für das Musikstück bearibeten",
+    "Edit layouyt paerameters": "Layout-Parameter bearbeiten",
+    "Edit printer correction paerameters": "Druckeranpassungen bearbeiten",
+    "edit settings for lyrics\nin current extract": "Einstellungen für Liedtexte bearbeiten",
+    "edit settings for sheet annotations\nin current extract": "Einstellungen für Seitenbeschriftung bearbeiten",
     "editor and harpnotes\napplicaple to tweak the notes for harp": "Zeige ABC und Harfennoten\ngeeignet zur Feinkorektur\nim Unterlegnotenblatt",
     "editor and notes\napplicable to enter notes": "Zeige ABC und Notendarstellung\ngeeignet zur Eingabe von Noten",
+    "Effective value": "aktuell wirksamer Wert",
     "enter a page bound annotation": "Seitengebundene Beschriftung\nanlegen/bearbeiten",
     "Enter Harp": "Harfeneingabe",
     "Enter Notes": "Noteneingabe",
-    "fit" : "auto",
+    "Enter the title of your sheet": "Gib denTitel deines Musikstücks an",
+    "Extract 0": "Auszug 0",
+    "Extract 1": "Auszug 1",
+    "Extract 2": "Auszug 2",
+    "Extract 3": "Auszug 3",
+    "Extract": "Auszug",
+    "There is an error in the data you have entered": "Fehler in den eingegebenen Daten",
     "fit to viewport":"in Anzeigebereich\neinpassen",
+    "fit" : "eingepasst",
     "Flowline": "Melodielinie",
     "flowlines": "Melodielinien",
+    "Folder in Dropbox": "Ordner in der Dropbox",
+    "followup distance": "Abstand der Folgelinie",
     "Get help": "Hilfe anzeigen",
+    "global settings": "Globale Einstellungen",
+    "Goto": "Sprung",
     "Harp": "Harfennoten",
     "harpnotes only\napplicable to proofread harpnotes": "Zeige nur Unterlegnoten\ngeeignet zur Kontrolle\ndes gesamten Blattes",
     "Help": "Hilfe",
     "Homepage": "Homepage",
+    "horizontal position": "horizontale Position (von links nach rechts)",
     "Id": "Identifikationsnummer",
+    "in distance": "Abstand der Eingangslinie",
+    "inject the default configuration (for development use only)": "inject the default configuration (for development use only)",
     "insert a title for the \ncurrent extract": "Titel für den aktuellen\n Auszug einfügen",
+    "Insert addon at cursor position": "Zusatzinformation an der Cursor-Position einfügen",
+    "Insert Addon": "Zusatz einfügen",
     "jumplines": "Sprunglinien",
+    "jumptarget": "Sprungziel",
+    "label": "**--label",
     "large view\nto see all details": "große Darstellung\nzur Beurteilung\nvon Details",
     "large": "groß",
     "layout": "Layout",
@@ -42,6 +95,9 @@
     "Manual": "Benutzerhandbuch",
     "medium view\nmost commonly used\nautoscroll works": "normale Größe\nmeistgenutzte Darstellunge\nautmatisches Scrollen\nfunktioniert",
     "medium": "normal",
+    "Name of annotation": "Name der Anmerkung",
+    "Name of draggable": "Name der Verschiebemarke",
+    "Name of target": "Name des Sprungziels",
     "New": "Neu",
     "nonflowrest": "Begleitpausen",
     "notes only": "Zeige nur die Noten",
@@ -54,6 +110,7 @@
     "Open the video tutorials on youtube": "Schulungsvideos auf\nYouTube",
     "Open Zupfnoter website": "Öffne die Zupfnoter - Homepage",
     "Open": "Öffnen",
+    "out distance": "Abstand der Ausgangslinie",
     "page annotation": "Seitenbeschriftung",
     "Perspective": "Ansicht",
     "Play music": "Noten wiedergeben",
@@ -63,6 +120,7 @@
     "Print A4 Harpnotes": "Harfennoten A4 drucken",
     "Print Tune": "Noten drucken",
     "Print": "Drucken",
+    "Printer adapt" : "Druckeranpassungen",
     "produce": "Auszüge",
     "Reference": "Referenz",
     "Render previews": "Vorschauen neu errechnen",
@@ -73,7 +131,7 @@
     "Save ABC file in dropbox": "ABC-File in Dropbox öffnen",
     "Save": "Speichern",
     "set screen perspective": "Bildschirmansicht wählen",
-    "sheet config": "Konfiguration",
+    "Shift": "links/rechts verschiebung",
     "show all panes": "Zeigt alle Fenster an",
     "small view\nto get an overview": "kleine Dastellung\nzur Gesamtübersicht",
     "small": "klein",
@@ -85,6 +143,7 @@
     "specify if rests are shown outside of flowlines": "Darstellung von Pausen,\nin Stimmen ohne Melodielinie\n(Begleitgsimmen)",
     "specify laoyut details \n(e.g. size of symbols)": "Angabe zu Layout details\nz.B.Größe der Symbole\nLinienstärken",
     "specify output of stringnames.\n Stringnames help to tune the instrument": "Angabe zur Ausgabe von Saitennamen\nSaitennamen helfen\nbeim Stimmen des insrumentes",
+    "specify printer adaptations details \n(e.g. offsets)": "Details der Druckeranpassung",
     "specify temmplate for\n note bound annotations": "Vorlage für notengebundene\nBeschriftung erstellen",
     "specify the vertical start position of the notes": "Abstand der ersten Note\nvom oberen Blattrand",
     "specify voices to \nbe shown in current extract": "Stimmen angeben, die im\naktuellen Auszug\ndargestellt werden sollen",
@@ -98,13 +157,26 @@
     "specify which voices\nshow repeat signs instead of jumplines": "Angabe, welche Stimmen\nWiederholgunszeichen statt\nSprunglinien verwenden",
     "specify which voides\nare considered to compute \nvertical spacing": "Angabe, welche Stimmen\nzur Berechnung\nder vertikalen Notenanordnung\nberücksihtigt werden",
     "startpos": "Startposition",
+    "Stop": "Stop",
     "stringnames": "Saitennamen",
     "stringnames.full": "Saitennamen.detail",
     "subflowlines": "Hilfsmelodielinien",
     "synchlines": "Synchroniationslinien",
+    "target to jump to": "Spruntziel",
+    "Text of annotation": "Text der Anmerkung",
+    "text": "Text",
+    "the name for the dreaggables of this note": "Name der Verschiebemarke dieser Note",
+    "the name for this target": "Name des Sprunziels",
     "title": "Titel",
+    "Tune": "Noten",
+    "Value": "Wert",
+    "vertical position (top->down)": "vertikale position (von oben nach unten)",
     "Videos": "Videos",
     "voices": "Stimmen",
+    "X-position": "X-Position",
+    "X:": "X:",
+    "xx": "xx",
+    "Y-position": "Y-position",
     "Yes": "Ja",
     "zoom harpnote preview": "Zoom in Vorschau der Harfennoten"
   }
