made a developer release
bumped version to 1.5.0 dev 1

fixed issue with Opal::server yielding Json files as objects

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -182,7 +182,7 @@
     "harpnotes only\napplicable to proofread harpnotes": "Zeige nur Unterlegnoten\ngeeignet zur Kontrolle\ndes gesamten Blattes",
     "Help": "Hilfe",
     "Homepage": "Homepage",
-    "horizontal position": "horizontale position von links nach rechts",
+    "horizontal position": "horizontale Position (von links nach rechts)",
     "Id": "Identifikationsnummer",
     "in distance": "Abstand der Eingangslinie",
     "inject the default configuration (for development use only)": "inject the default configuration (for development use only)",
