#47 now also have translation of config keys

--- a/30_sources/SRC_Zupfnoter/public/locale/conf-help_de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/conf-help_de-de.json
@@ -1,11 +1,16 @@
 {
-  "extract":"<p>Spezifiziert Auszüge für deine Unterlegnoten Bitte beachte</p>\n\n<ul>\n<li>Auszug 0 vererbt an folgende</li>\n<li>Auszug hat Struktur:\n\n<ul>\n<li> bla fasel</li>\n</ul></li>\n</ul>\n",
-  "extract.0":"<p>Spezifiziert einen konkreten Auszug für deine Unterlegnoten</p>\n",
+  "ELLIPSE_SIZE":"<p>Hier kannst du die Größe der ganzen Noten einstellen. Sinnvolle Werte sind [2-4, 1.2-2].</p>\n\n<blockquote>\n<p><strong>Hinweis</strong> Die Größe der anderen Noten werden ausgehend von diesem Wert berechnet.</p>\n\n<p>Da die Noten auch mit der dicken Linie umrandet werden, kann auch die &quot;Linienstärke &#39;dick&#39;&quot; reeduziert werden,\num ein filigraneres Notenbild zu erhalten.</p>\n</blockquote>\n",
+  "extract":"<p>Hier kannst du Auszüge für dein Unterlegnoten definieren. Das ist besonders bei mehrstimmigen Sätzen sinnvoll.</p>\n\n<blockquote>\n<p><strong>Hinweis</strong>: Einstellungen im Auszug 0 wirken auf die anderen Auszüge, sofern sie dort nicht überschrieben werden.</p>\n</blockquote>\n",
+  "extract.0":"<p>Spezifiziert einen konkreten Auszug für deine Unterlegnoten</p>\n\n<blockquote>\n<p><strong>Hinweis</strong>: Einstellungen im Auszug 0 wirken auf die anderen Auszüge, sofern sie dort nicht überschrieben werden.</p>\n</blockquote>\n",
+  "extract.0.title":"<p>Spezifiziert den Titel des Auszuges.</p>\n\n<blockquote>\n<p><strong>Hinweis</strong>: der Titel des Auszuges wird an die Angabe in der Zeile &quot;F:&quot; angehängt, falls nicht noch ein &#39;extract.0.filename&#39; spezifiziert ist.</p>\n</blockquote>\n",
   "autopos":"<p>Schaltet die automatische positionierungn ein. Wenn ausgeschaltet, gelten die Werte von pos.</p>\n",
   "extract.0.barnumbers.voices":"<p>Liste von  Stimmen, die Taktnummern bekommen sollen</p>\n",
   "extract.0.countnotes.voices":"<p>Liste von Stimmen, die Zählhilfen bekommmen sollen</p>\n",
   "layout":"<p>Hier kannst du die Parameter für das Layout eintsllen.\nDamit lässt das Notenbild gezielt optimieren.</p>\n",
   "layout.limit_a3":"<p>Diese Funktion verschibt Noten am A3-Blattrand\nnach innen. Da das Unterlegnotenblatt etwas\ngrößer ist als A3 würde sonst die Note angeshnitten.</p>\n",
+  "layout.LINE_THIN":"<p>Stellt die Breite von dünnen Linien ein.</p>\n",
+  "laoyut.LINE_MEDIUM":"<p>Stellt die Breite von mittleren Linien ein (z.B. Flußline</p>\n",
+  "":"",
   "lyrics":"<p>Hier wird die Positionierung der Liedtexte gesteuert.\nMan kann die Liedtexte auf mehrer Blöcke aufteilen.\nEin einzelner Block listet die Strophen auf, die er enthält,\nund die gemeinsam poitioniert werden.</p>\n",
   "lyrics.0":"<h2>Liedtextblock</h2>\n\n<p>Ein einzelner Block von Liedtexten.</p>\n",
   "lyrics.0.pos":"<p>Position (angeben als x,y) an welcher der Liedtext-Block ausgegeben werden soll.</p>\n",
@@ -16,9 +21,13 @@
   "printer.a3_offset":"<p>Verschiebt das Druckbild beim Ausdruck auf A3-Papier.\nAngabe als x, y in mm.</p>\n\n<p>Dies ist sinnvoll, wenn ein Unterlegnotenblatt für\neine 25 saitige Harfe auf ein A3-Blatt gedruckt wird.</p>\n\n<p>In diesem Fall kann es auch sinnvoll sein, &quot;limit-A3&quot; auzuschalten.</p>\n",
   "printer.a4_offset":"<p>Verschiebt das Druckbild beim Ausdruck auf A4-Papier.\nAngabe als x, y in mm.</p>\n",
   "printer.show_border":"<p>Steuert, ob die Blattbegrenzung gedruckt werden soll.\nDie Blattbegrenzung liegt eigntlich ausserhalb\ndes Bereiches, den der Drucker auf dem Papier\nbedrucken kann. Wenn das Druckbild auf dem Papier\nzentriert wird, ist die Blattbegrenzung nicht sichtbar.</p>\n\n<p>Manche Drucker positionieren das Druckbild aber nicht zentriert auf dem Papier.\nDadurch wird die Blattbegrenzung gedruckt, dafür fehlen\nunten ca. 10 mm.</p>\n\n<p>Versuche ob das Ausschalten der Blattbegrenzung die Situation\nverbessert.</p>\n",
-  "repeatsigns.voices":"<p>Liste der Stimmen für die Wiederholungszeichen anstelle von Sprunglinine ausgegeben werden.</p>\n",
+  "repeatsigns":"<p>Hier kannst du die Darstellung der Wiederholungszeichen steuern.</p>\n",
+  "repeatsigns.voices":"<p>Liste der Stimmen für die Wiederholungszeichen anstelle von Sprunglinine ausgegeben werden.</p>\n\n<blockquote>\n<p>Hinweis: Zupnoter stellt für die hier aufgelisteten Stimmen keine Sprunglinien mehr dar.</p>\n</blockquote>\n",
+  "repeatsigns.left.text":"<p>Text der als linkes Wiederholungszeichen ausgegeben werden soll.</p>\n",
+  "repeatsigns.right.text":"<p>Text der als rechtes Wiederholungszeichen ausgegeben werden soll.</p>\n",
+  "REST-SIZE":"<p>Hier kannst du die Größe der Pausen einstellen. Sinnvolle Werte sind [2-4, 1.2-2]</p>\n\n<blockquote>\n<p><strong>Hinweis</strong> Bitte beachte, dass im Grund nur die Angabe der Hähe von Bedeutung ist, da das Pausensymbol nicht verzert wird.</p>\n</blockquote>\n",
   "stringnames.text":"<p>Liste der Saitennamen getrennt druch Leerzeichen.\nDie Liste wird so oft zusamengefügt, dass alle Saiten einen Nanen bekommen.</p>\n\n<p>In der Regel reicht es also, die Saitennamen für eine Oktave anzugeben.</p>\n\n<h2>Beispiel</h2>\n\n<ul>\n<li><code>+ -</code> erzeugt <code>+ - +  + - + -</code></li>\n<li><code>C C# D C# E F F# G G# A A# Bb B</code> erzeugt die regulären Saitennamen</li>\n</ul>\n",
-  "style":"<p>Formatstil für den Text.</p>\n",
+  "style":"<p>Hier kannst du den Stil für den Text einstellen. Du has die Auswahl aus vordefinierten Stilen.</p>\n",
   "text":"<p>Text, der ausgegeben werden soll. Kann auch mehrzeilig sein</p>\n",
   "voices":"<p>Nummern der Stimmen für diesen Auszug.\nDie Nummer ergibt sich aus der Reihnfolge in der %%score - Aweisung.</p>\n",
   "vpos":"<p>Vertikaler Abstand vom oberen Blattrand in mm</p>\n"
