--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -111,8 +111,11 @@
     "subflowline": "Hilfsmelodielinie",
     "create": "erzeugen",
     "A3": "A3",
+    "a3_offset": "Offset für A3",
     "A4": "A4",
+    "a4_offset": "Offset für A4",
     "abc Tutorial": "ABC - Einführung",
+    "abc_parser": "abc_parser",
     "Add a draggable mark": "Verschiebemarke einfügen",
     "Add a Jump": "Sprung einfügen",
     "Add a Jumptarget": "Sprungziel einfügen",
@@ -121,29 +124,58 @@
     "Add an annotation": "Anmekung hinzufügen",
     "Add Config": "Konfig. einfügen",
     "Add missing entries": "Fehlende Einträge einfügen",
+    "after_colon_1": "after_colon_1",
+    "after_colon_n": "after_colon_n",
+    "after_comma": "after_comma",
+    "aligned": "aligned",
     "All": "Alle Fenster",
     "Annotation Ref": "Anmerkungsreferenz",
     "annotation template": "Beschriftungsvorlage",
     "Annotation": "Anmerkung",
+    "annotation": "Beschriftung",
+    "annotations": "Beschriftungen",
+    "autopos": "automatisch positionieren",
     "barnumbers and countnotes": "Taknummer und Zählmarken",
     "barnumbers": "Taktnummern",
     "barnumbers.full": "Taktnummern.detail",
     "basic settings": "Grundeinstellungen",
+    "BEAT_PER_DURATION": "**--BEAT_PER_DURATION",
+    "BEAT_RESOLUTION": "**--BEAT_RESOLUTION",
+    "before_colon_n": "**--before_colon_n",
+    "bold": "fettdruck",
     "Choose extract": "Auszug wählen",
     "configure positioning of rests\ncompatible to version 1.3": "Pausen kompatibel zu version 1.3}",
     "configure your sheet": "Blatt konfigureren",
     "countnotes": "Zählmarken",
+    "cp1": "**--cp1",
+    "cp2": "**--cp2",
     "Create new sheet": "Neues Blatt erstellen",
     "current extract": "aktueller Auszug",
+    "d1": "**--d1",
+    "d12": "**--d12",
+    "d16": "**--d16",
+    "d2": "**--d2",
+    "d24": "**--d24",
+    "d3": "**--d3",
+    "d32": "**--d32",
+    "d4": "**--d4",
+    "d48": "**--d48",
+    "d6": "**--d6",
+    "d64": "**--d64",
+    "d8": "**--d8",
+    "default": "Vorgabewert",
+    "defaults": "Vorgabewerte",
     "Demo": "Demonstration",
     "direction to shift the note": "Richtung, in welche die Note geschoben werden soll",
     "direction": "Richtung",
+    "Distance for followup-line from first note after variation": "Abstand der Folgelinie von der ersten Note nach dem varianten Abschnitt",
     "Distance for in-line from last note before variation": "Abstand der Eingangslinie von der letzten Note vor dem varianten Abschnitt",
     "Distance for out-line from firat note after variation": "Abstand der Ausgangslinie von der ersten Note nach dem varianten Abschnitt",
-    "Distance for followup-line from first note after variation": "Abstand der Folgelinie von der ersten Note nach dem varianten Abschnitt",
     "Dl abc": "Dl abc",
     "download abc to local system": "ABC - File herunterladen",
     "Draggable": "Verschiebemarke",
+    "DRAWING_AREA_SIZE": "Größe der Zeichenfläche",
+    "DURATION_TO_STYLE": "Dauer-zu-Zeit",
     "Edit addon on cursor position": "Zusatzinformation bearbeiten",
     "Edit Addon": "Zusatz bearbeiten ",
     "edit barnumbers or countnotes": "Taktnummern und Zählmarken bearbeiten",
@@ -159,57 +191,77 @@
     "editor and harpnotes\napplicaple to tweak the notes for harp": "Zeige ABC und Harfennoten\ngeeignet zur Feinkorektur\nim Unterlegnotenblatt",
     "editor and notes\napplicable to enter notes": "Zeige ABC und Notendarstellung\ngeeignet zur Eingabe von Noten",
     "Effective value": "aktuell wirksamer Wert",
+    "ELLIPSE_SIZE": "Notengröße",
     "enter a page bound annotation": "Seitengebundene Beschriftung\nanlegen/bearbeiten",
     "Enter Harp": "Harfeneingabe",
     "Enter Notes": "Noteneingabe",
     "Enter the title of your sheet": "Gib denTitel deines Musikstücks an",
+    "err": "Fehler",
+    "explicit_sort": "**--explicit_sort",
     "Extract 0": "Auszug 0",
     "Extract 1": "Auszug 1",
     "Extract 2": "Auszug 2",
     "Extract 3": "Auszug 3",
     "Extract": "Auszug",
-    "There is an error in the data you have entered": "Fehler in den eingegebenen Daten",
+    "extract": "Auszug",
     "fit to viewport": "in Anzeigebereich\neinpassen",
     "fit": "eingepasst",
     "Flowline": "Melodielinie",
     "flowlines": "Melodielinien",
     "Folder in Dropbox": "Ordner in der Dropbox",
     "followup distance": "Abstand der Folgelinie",
+    "font_size": "Schriftgröße",
+    "font_style": "Schriftstil",
+    "FONT_STYLE_DEF": "Schriftstildefinition",
     "Get help": "Hilfe anzeigen",
     "global settings": "Globale Einstellungen",
     "Goto": "Sprung",
+    "grid": "Raster",
     "Harp": "Harfennoten",
     "harpnotes only\napplicable to proofread harpnotes": "Zeige nur Unterlegnoten\ngeeignet zur Kontrolle\ndes gesamten Blattes",
     "Help": "Hilfe",
     "Homepage": "Homepage",
     "horizontal position": "horizontale Position (von links nach rechts)",
+    "hpos": "horizongale Position",
     "Id": "Identifikationsnummer",
     "in distance": "Abstand der Eingangslinie",
     "inject the default configuration (for development use only)": "inject the default configuration (for development use only)",
     "insert a title for the \ncurrent extract": "Titel für den aktuellen\n Auszug einfügen",
     "Insert addon at cursor position": "Zusatzinformation an der Cursor-Position einfügen",
     "Insert Addon": "Zusatz einfügen",
+    "italic": "kursiv",
     "jumplines": "Sprunglinien",
     "jumptarget": "Sprungziel",
+    "Jumptarget": "Sprungziel",
     "label": "**--label",
     "large view\nto see all details": "große Darstellung\nzur Beurteilung\nvon Details",
     "large": "groß",
     "layout": "Layout",
     "layoutlines": "Stimmen für Layout",
     "Leave Zupfnoter?\nreally ...?": "Zupfnoter verlassen? echt jetzt ...?",
+    "left": "links",
     "legend": "Legende",
+    "limit_a3": "Begrenzung auf A3",
+    "LINE_MEDIUM": "Linienstärke mittel",
+    "LINE_THICK": "Linienstärke dick",
+    "LINE_THIN": "Linienstärke dünn",
     "Login in dropbox;\nchoose folder in Dropbox": "In Dropbox einloggen;\nOrdner in Dropbox wählen",
     "Login": "Einloggen",
     "lyrics": "Liedtexte",
     "Manual": "Benutzerhandbuch",
+    "marks": "Saitenmarken",
     "medium view\nmost commonly used\nautoscroll works": "normale Größe\nmeistgenutzte Darstellunge\nautmatisches Scrollen\nfunktioniert",
     "medium": "normal",
+    "MM_PER_POINT": "MM pro point",
     "Name of annotation": "Name der Anmerkung",
     "Name of draggable": "Name der Verschiebemarke",
     "Name of target": "Name des Sprungziels",
+    "neatjson": "JSON-Formatiuerng",
     "New": "Neu",
     "nonflowrest": "Begleitpausen",
+    "notebound": "Notenbezogen",
     "notes only": "Zeige nur die Noten",
+    "notes": "Beschriftungen",
     "Notes": "Noten",
     "Open a demo sheet\n(Ich steh an deiner Kripen hier)": "Öffne ein neues\nZupfnoter-Fenster mit\neinem Demonstrationsstück\n(Ich steh an deiner Krippen hier)",
     "Open a new Zupfnoter window\nwith the reference page": "Öffne ein neues\nZupfnoter-Fenster mit\neiner Erklärung\nder Zupfnoter-Ausgabe",
@@ -221,28 +273,48 @@
     "Open": "Öffnen",
     "out distance": "Abstand der Ausgangslinie",
     "page annotation": "Seitenbeschriftung",
+    "partname": "Partname",
     "Perspective": "Ansicht",
+    "PITCH_OFFSET": "PitchOffset",
     "Play music": "Noten wiedergeben",
     "Play": "Play",
     "Please double check the generated sheets.\n\nYour abc file was automatically migrated\nto Zupfnoter version": "Bitte prüfe die erzeugten Noten.\n\nDie Eingabedatei wurde automatisch angepasst auf auf\nZupfnoter Version ",
+    "pos": "Position",
+    "prefix": "Präfix",
     "Print A3 Harpnotes": "Harfennoten A3 drucken",
     "Print A4 Harpnotes": "Harfennoten A4 drucken",
     "Print Tune": "Noten drucken",
     "Print": "Drucken",
     "Printer adapt": "Druckeranpassungen",
+    "printer": "Drucker",
     "produce": "Auszüge",
     "Reference": "Referenz",
+    "regular": "normal",
     "Render previews": "Vorschauen neu errechnen",
     "Render": "Rendern",
+    "repeatend": "Wiederholungsende",
     "repeatsigns": "Wiederholungszeichen",
     "repeatsigns.full": "Wiederholugnszeichen.detail",
+    "repeatstart": "Wiederholungsanfang",
+    "REST_SIZE": "Größe der Pausen",
+    "REST_TO_GLYPH": "**--REST_TO_GLYPH",
+    "restposition": "Position der Pausen",
     "rests as V 1.3": "Pausen wie in V. 1.3",
+    "right": "rechts",
     "Save ABC file in dropbox": "ABC-File in Dropbox öffnen",
     "set screen perspective": "Bildschirmansicht wählen",
+    "shape": "Linienform",
     "Shift": "links/rechts verschiebung",
+    "SHORTEST_NOTE": "kürzeste Note",
     "show all panes": "Zeigt alle Fenster an",
+    "show_border": "Blattbegrenzg. zeichnen",
+    "SHOW_SLUR": "zeige Bindebögen",
     "small view\nto get an overview": "kleine Dastellung\nzur Gesamtübersicht",
     "small": "klein",
+    "small_bold": "klein und fett",
+    "small_italic": "klein und kursiv",
+    "smaller": "kleiner",
+    "sorted": "sortiert",
     "specify all details for bar numbers": "Detaillierte Angaben zu Taktnummern",
     "specify all details for repeat signs": "Detaillierte Angaben\nzu Wiederholungszeichen",
     "specify details for legend": "Einzelheiten für Legende\nfestlegen",
@@ -264,27 +336,44 @@
     "specify which voices\nare connected by synchronization lines": "Angabe, welche Stimmenüber\nSynchronisationslinien\n(gestrichelte horizontale Linien)\nverbunden werden",
     "specify which voices\nshow repeat signs instead of jumplines": "Angabe, welche Stimmen\nWiederholgunszeichen statt\nSprunglinien verwenden",
     "specify which voides\nare considered to compute \nvertical spacing": "Angabe, welche Stimmen\nzur Berechnung\nder vertikalen Notenanordnung\nberücksihtigt werden",
+    "spos": "Position Sublegende",
     "startpos": "Startposition",
     "Stop": "Stop",
     "stringnames": "Saitennamen",
     "stringnames.full": "Saitennamen.detail",
+    "style": "Stil",
     "subflowlines": "Hilfsmelodielinien",
     "synchlines": "Synchroniationslinien",
     "target to jump to": "Spruntziel",
+    "templates": "Vorlagen",
     "Text of annotation": "Text der Anmerkung",
     "text": "Text",
+    "text_color": "Textfarbe",
     "the name for the dreaggables of this note": "Name der Verschiebemarke dieser Note",
     "the name for this target": "Name des Sprunziels",
+    "There is an error in the data you have entered": "Fehler in den eingegebenen Daten",
     "title": "Titel",
     "Tune": "Noten",
+    "tuplet": "Tuplet",
     "Value": "Wert",
+    "variantend": "Variantes Ende",
+    "verses": "Strophens",
     "vertical position (top->down)": "vertikale position (von oben nach unten)",
     "Videos": "Videos",
+    "vl": "'V' links",
     "voices": "Stimmen",
+    "vpos": "vertikale Position",
+    "vr": "'V' rechts",
+    "vt": "'V' oben",
+    "wrap": "wrap",
     "X-position": "X-Position",
     "X:": "X:",
+    "X_OFFSET": "X - Offset",
+    "X_SPACING": "Saitenabstand",
     "xx": "xx",
     "Y-position": "Y-position",
-    "zoom harpnote preview": "Zoom in Vorschau der Harfennoten"
+    "Y_SCALE": "Vertikale Skalierung",
+    "zoom harpnote preview": "Zoom in Vorschau der Harfennoten",
+    "end-of-translagion": "end-of-translation"
   }
 }
