#72 now have a parameter "filenamepart" per extract to determine the filename addendum for the extract

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -204,6 +204,7 @@
     "Extract 3": "Auszug 3",
     "Extract": "Auszug",
     "extract": "Auszug",
+    "filenamepart": "Filename-Zusatz",
     "fit to viewport": "in Anzeigebereich\neinpassen",
     "fit": "eingepasst",
     "Flowline": "Melodielinie",
