#76 now raise a popup if an error occurs during render or save #47 improved translatins

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -114,6 +114,7 @@
     "a3_offset": "Offset für A3",
     "A4": "A4",
     "a4_offset": "Offset für A4",
+    "abc": "ABC-Notation",
     "abc Tutorial": "ABC - Einführung",
     "abc_parser": "abc_parser",
     "Add a draggable mark": "Verschiebemarke einfügen",
@@ -144,12 +145,14 @@
     "before_colon_n": "**--before_colon_n",
     "bold": "fettdruck",
     "Choose extract": "Auszug wählen",
+    "Configuration": "Konfiguration",
     "configure positioning of rests\ncompatible to version 1.3": "Pausen kompatibel zu version 1.3}",
     "configure your sheet": "Blatt konfigureren",
     "countnotes": "Zählmarken",
     "cp1": "**--cp1",
     "cp2": "**--cp2",
     "Create new sheet": "Neues Blatt erstellen",
+    "Create new Sheet": "Neues Musikstück erstellen",
     "current extract": "aktueller Auszug",
     "d1": "**--d1",
     "d12": "**--d12",
@@ -197,6 +200,7 @@
     "Enter Notes": "Noteneingabe",
     "Enter the title of your sheet": "Gib denTitel deines Musikstücks an",
     "err": "Fehler",
+    "Errors occurred": "Es sind Fehler aufgetreten",
     "explicit_sort": "**--explicit_sort",
     "Extract 0": "Auszug 0",
     "Extract 1": "Auszug 1",
@@ -354,6 +358,7 @@
     "the name for this target": "Name des Sprunziels",
     "There is an error in the data you have entered": "Fehler in den eingegebenen Daten",
     "title": "Titel",
+    "Title": "Titel",
     "Tune": "Noten",
     "tuplet": "Tuplet",
     "Value": "Wert",
