#83 some refactoring to produce the manual for configuration #67 more entries on help for config form #47 more translations #38 improved generation of config manual

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -136,7 +136,7 @@
     "annotation": "Beschriftung",
     "annotations": "Beschriftungen",
     "autopos": "automatisch positionieren",
-    "barnumbers and countnotes": "Taknummer und Zählmarken",
+    "barnumbers and countnotes": "Takntummer und Zählmarken",
     "barnumbers": "Taktnummern",
     "barnumbers.full": "Taktnummern.detail",
     "basic settings": "Grundeinstellungen",
@@ -227,7 +227,7 @@
     "Help": "Hilfe",
     "Homepage": "Homepage",
     "horizontal position": "horizontale Position (von links nach rechts)",
-    "hpos": "horizongale Position",
+    "hpos": "horizontale Position",
     "Id": "Identifikationsnummer",
     "in distance": "Abstand der Eingangslinie",
     "inject the default configuration (for development use only)": "inject the default configuration (for development use only)",
@@ -265,6 +265,7 @@
     "New": "Neu",
     "nonflowrest": "Begleitpausen",
     "notebound": "Notenbezogen",
+    "notebound annotation": "Notenbezogene Beschriftung",
     "notes only": "Zeige nur die Noten",
     "notes": "Beschriftungen",
     "Notes": "Noten",
