--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -26,7 +26,7 @@
     "annotation": "Beschriftung",
     "annotations": "Beschriftungen",
     "autopos": "automatisch positionieren",
-    "barnumbers and countnotes": "Taknummer und Zählmarken",
+    "barnumbers and countnotes": "Takntummer und Zählmarken",
     "barnumbers": "Taktnummern",
     "barnumbers.full": "Taktnummern.detail",
     "basic settings": "Grundeinstellungen",
@@ -118,7 +118,7 @@
     "Help": "Hilfe",
     "Homepage": "Homepage",
     "horizontal position": "horizontale Position (von links nach rechts)",
-    "hpos": "horizongale Position",
+    "hpos": "horizontale Position",
     "Id": "Identifikationsnummer",
     "in distance": "Abstand der Eingangslinie",
     "inject the default configuration (for development use only)": "inject the default configuration (for development use only)",
@@ -156,6 +156,7 @@
     "New": "Neu",
     "nonflowrest": "Begleitpausen",
     "notebound": "Notenbezogen",
+    "notebound annotation": "Notenbezogene Beschriftung",
     "notes only": "Zeige nur die Noten",
     "notes": "Beschriftungen",
     "Notes": "Noten",
