#47, #67 now we have help text for all ...

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -149,8 +149,8 @@
     "configure positioning of rests\ncompatible to version 1.3": "Pausen kompatibel zu version 1.3}",
     "configure your sheet": "Blatt konfigureren",
     "countnotes": "Zählmarken",
-    "cp1": "**--cp1",
-    "cp2": "**--cp2",
+    "cp1": "Kontrollpunkt 1",
+    "cp2": "Kontrollpunkt 2",
     "Create new sheet": "Neues Blatt erstellen",
     "Create new Sheet": "Neues Musikstück erstellen",
     "current extract": "aktueller Auszug",
