#47, #67 factored out the source for help text

--- a/30_sources/SRC_Zupfnoter/public/locale/conf-help_de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/conf-help_de-de.json
@@ -24,7 +24,7 @@
   "layout.LINE_MEDIUM":"<p>Hier stellst du die Breite (in mm) von mittelstarken Linien ein.</p>\n",
   "layout.LINE_THICK":"<p>Hier stellst du die Breite (in mm) von dicken Linien ein.</p>\n",
   "lyrics":"<p>Hier steuerst du die Positionierung der Liedtexte. Dabei kannst du den Liedtext\nauf mehrer Blöcke aufteilen.</p>\n\n<p>Ein einzelner Block listet die Strophen auf, die er enthält,\nund die gemeinsam poitioniert werden.</p>\n",
-  "lyrics.0":"<h2>Liedtextblock</h2>\n\n<p>Hier definierst du einen einzelner Block von Liedtexten.</p>\n",
+  "lyrics.0":"<p>Hier definierst du einen einzelnen Block von Liedtexten.</p>\n",
   "lyrics.0.pos":"<p>Hier gibst du die Position an, an welcher der Liedtext-Block ausgegeben werden soll.\nAngabe erfolgt in mm als kommagetrennte Liste von horizontaler / vertikaler Position.</p>\n",
   "lyrics.pos":"<p>Dies ist die Vorgabe für Position, an welcher der Liedtext-Block ausgegeben werden soll.\nAngabe erfolgt in mm als kommagetrennte Liste von horizontaler / vertikaler Position.</p>\n",
   "lyrics.0.verses":"<p>Hier gibst du die Liste der Strophen an die im Liedtext-Block ausgegeben werden.</p>\n",
@@ -45,7 +45,7 @@
   "repeatsigns.left.text":"<p>Hier gibst du den Text an, der als linkes Wiederholungszeichen ausgegeben werden soll.</p>\n",
   "repeatsigns.right":"<p>Hier kannst du die Darstellung des rechten Wiederholungszeichen steuern.</p>\n",
   "repeatsigns.right.text":"<p>Hier gibst du den Text an, der als rechtes Wiederholungszeichen ausgegeben werden soll.</p>\n",
-  "restposition":"<p>Hier kannst du angeben an welcher Tonhöhe die Pausen eingetragenw werden sollen. Pausen\nhaben an sich keine Tonhöhe, daher ist es nicht eindeutig, wie sie im Umterlegnotenblatt\npositioniert werden sollen.</p>\n\n<ul>\n<li><code>center</code> positioniert die Pause zwischen die vorherige und die nächste Note</li>\n<li><code>next</code> positioniert die Pause auf die gleiche Tonhöhe wie die nächste Note</li>\n<li><code>default</code> übernimmt den Vorgabewert.</li>\n</ul>\n",
+  "restposition":"<p>Hier kannst du angeben an welcher Tonhöhe die Pausen eingetragenw werden sollen. Pausen\nhaben an sich keine Tonhöhe, daher ist es nicht eindeutig, wie sie im Umterlegnotenblatt\npositioniert werden sollen.</p>\n\n<ul>\n<li><code>center</code> positioniert die Pause zwischen die vorherige und die nächste Note</li>\n<li><code>next</code> positioniert die Pause auf die gleiche Tonhöhe wie die nächste Note</li>\n<li><code>default</code> übernimmt den Vorgabewert</li>\n</ul>\n",
   "restposition.default":"<p>Hier kannst den Vorgabewert für die Pausenposition angeben.</p>\n\n<blockquote>\n<p><strong>Hinweis</strong>: <code>default</code> als Vorgabewert nimmt den intenrn Vorgabewert <code>center</code>.</p>\n</blockquote>\n",
   "restposition.repeatstart":"<p>Hier kannst du die Pausenposition vor einer Wiederholung einstellen.</p>\n",
   "restposition.repeatend":"<p>Hier kannst du die Pausenposition nach einer Wiederholung einstellen.</p>\n",
@@ -54,7 +54,7 @@
   "stringnames":"<p>Hier kannst du stueern, ob und wie Saitennamen auf das Unterlegnotenblatt\ngedruckt werden.</p>\n",
   "stringnames.marks":"<p>Hier kannst du angeben, ob und wo Saitenmarken gedruckt werden.</p>\n",
   "stringnames.marks.hpos":"<p>Hier gibst du die horizontale Position der Saitenmarken an. Die Angabe ist eine\ndurch Komma getrennte liste von Midi-Pitches.</p>\n\n<p>Die Angabe <code>[43, 55, 79]</code> druckt Saitenmarken bei <code>G, G, g&#39;</code>. also bei den\näußeren G-Saiten der 25-saitigen bzw. der 37-saitigen Tischharfe.</p>\n",
-  "stringnames.text":"<p>Hier gibst du die Liste der Saitennamen getrennt druch Leerzeichen an.\nDie Liste wird so oft zusamengefügt, dass alle Saiten einen Nanen bekommen.</p>\n\n<p>In der Regel reicht es also, die Saitennamen für eine Oktave anzugeben.</p>\n\n<h2>Beispiel</h2>\n\n<ul>\n<li><code>+ -</code> erzeugt <code>+ - +  + - + -</code></li>\n<li><code>C C# D C# E F F# G G# A A# Bb B</code> erzeugt die regulären Saitennamen</li>\n</ul>\n",
+  "stringnames.text":"<p>Hier gibst du die Liste der Saitennamen getrennt druch Leerzeichen an.\nDie Liste wird so oft zusamengefügt, dass alle Saiten einen Nanen bekommen.</p>\n\n<p>In der Regel reicht es also, die Saitennamen für eine Oktave anzugeben.</p>\n",
   "style":"<p>Hier kannst du den Stil für den Text einstellen. Du hast eine Auswahl aus vordefinierten Stilen.</p>\n",
   "templates":"<p>Dieser Parameter kann nicht vom Benutzer gesetzt werden sondern liefert die Vorlagen beim Einfügugen\nneuer Liedtext-Blöcke bzw. Seitenbeschriftungen etc.</p>\n\n<p>Er ist hier aufgeführt, um die Vorlagen selbst zu dokumentieren.</p>\n",
   "tuplet":"<p>Hier kannst du die Darstellung von Triolen (genauer gesagt, von Tuplets) steuern.</p>\n",
