#47, #67 some fixes in help texts

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -211,8 +211,8 @@
     "filenamepart": "Filename-Zusatz",
     "fit to viewport": "in Anzeigebereich\neinpassen",
     "fit": "eingepasst",
-    "Flowline": "Melodielinie",
-    "flowlines": "Melodielinien",
+    "Flowline": "Flußlinie",
+    "flowlines": "Flußlinien",
     "Folder in Dropbox": "Ordner in der Dropbox",
     "followup distance": "Abstand der Folgelinie",
     "font_size": "Schriftgröße",
@@ -350,6 +350,7 @@
     "style": "Stil",
     "subflowlines": "Hilfsmelodielinien",
     "synchlines": "Synchroniationslinien",
+    "SnippetEditor::Annotation": "Zusatz bearbeiten::Anmerkung",
     "target to jump to": "Spruntziel",
     "templates": "Vorlagen",
     "Text of annotation": "Text der Anmerkung",
@@ -364,7 +365,7 @@
     "tuplet": "Tuplet",
     "Value": "Wert",
     "variantend": "Variantes Ende",
-    "verses": "Strophens",
+    "verses": "Strophen",
     "vertical position (top->down)": "vertikale position (von oben nach unten)",
     "Videos": "Videos",
     "vl": "'V' links",
