#47, #67 some fixes in help texts
declared as 1.5.0 dev 2 and published on xpzupfnoter

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -114,15 +114,15 @@
     "a3_offset": "Offset für A3",
     "A4": "A4",
     "a4_offset": "Offset für A4",
-    "abc": "ABC-Notation",
     "abc Tutorial": "ABC - Einführung",
+    "abc": "ABC-Notation",
     "abc_parser": "abc_parser",
     "Add a draggable mark": "Verschiebemarke einfügen",
     "Add a Jump": "Sprung einfügen",
     "Add a Jumptarget": "Sprungziel einfügen",
-    "Add a predefined annotation": "Anmerkung referenzieren",
+    "Add a predefined annotation": "Referenz auf Bechriftungsvorlage hinzufügen",
     "Add a shift": "Note rechts/links schieben",
-    "Add an annotation": "Anmekung hinzufügen",
+    "Add an annotation": "Notenbeschriftung  hinzufügen",
     "Add Config": "Konfig. einfügen",
     "Add missing entries": "Fehlende Einträge einfügen",
     "after_colon_1": "after_colon_1",
@@ -130,13 +130,13 @@
     "after_comma": "after_comma",
     "aligned": "aligned",
     "All": "Alle Fenster",
-    "Annotation Ref": "Anmerkungsreferenz",
+    "Annotation Ref": "Ref. Notenbeschriftung",
     "annotation template": "Beschriftungsvorlage",
-    "Annotation": "Anmerkung",
-    "annotation": "Beschriftung",
-    "annotations": "Beschriftungen",
+    "annotation": "Beschriftungsvorlage",
+    "Annotation": "Notenbeschriftung",
+    "annotations": "Beschriftungsvorlagen",
     "autopos": "automatisch positionieren",
-    "barnumbers and countnotes": "Takntummer und Zählmarken",
+    "barnumbers and countnotes": "Taktnummer und Zählmarken",
     "barnumbers": "Taktnummern",
     "barnumbers.full": "Taktnummern.detail",
     "basic settings": "Grundeinstellungen",
@@ -188,6 +188,7 @@
     "Edit current extract": "Konfiguration des aktuellen Auszugs bearbeiten",
     "edit global settings for the current song": "Globale Einstellungen für das Musikstück bearibeten",
     "Edit layouyt paerameters": "Layout-Parameter bearbeiten",
+    "Edit presentation of stringanmes": "Darstellung der Saitennamen bearbeiten",
     "Edit printer correction paerameters": "Druckeranpassungen bearbeiten",
     "edit settings for lyrics\nin current extract": "Einstellungen für Liedtexte bearbeiten",
     "edit settings for sheet annotations\nin current extract": "Einstellungen für Seitenbeschriftung bearbeiten",
@@ -258,17 +259,17 @@
     "medium view\nmost commonly used\nautoscroll works": "normale Größe\nmeistgenutzte Darstellunge\nautmatisches Scrollen\nfunktioniert",
     "medium": "normal",
     "MM_PER_POINT": "MM pro point",
-    "Name of annotation": "Name der Anmerkung",
+    "Name of annotation": "Name der Beschriftungsvorlage",
     "Name of draggable": "Name der Verschiebemarke",
     "Name of target": "Name des Sprungziels",
     "neatjson": "JSON-Formatiuerng",
     "New": "Neu",
     "nonflowrest": "Begleitpausen",
-    "notebound": "Notenbezogen",
     "notebound annotation": "Notenbezogene Beschriftung",
+    "notebound": "Notenbezogen",
     "notes only": "Zeige nur die Noten",
-    "notes": "Beschriftungen",
     "Notes": "Noten",
+    "notes": "Seitenbeschriftungen",
     "Open a demo sheet\n(Ich steh an deiner Kripen hier)": "Öffne ein neues\nZupfnoter-Fenster mit\neinem Demonstrationsstück\n(Ich steh an deiner Krippen hier)",
     "Open a new Zupfnoter window\nwith the reference page": "Öffne ein neues\nZupfnoter-Fenster mit\neiner Erklärung\nder Zupfnoter-Ausgabe",
     "Open ABC file in dropbox": "ABC-File in Dropbox öffnen",
@@ -302,7 +303,7 @@
     "repeatsigns": "Wiederholungszeichen",
     "repeatsigns.full": "Wiederholugnszeichen.detail",
     "repeatstart": "Wiederholungsanfang",
-    "REST_SIZE": "Größe der Pausen",
+    "REST_SIZE": "Pausengröße",
     "REST_TO_GLYPH": "**--REST_TO_GLYPH",
     "restposition": "Position der Pausen",
     "rests as V 1.3": "Pausen wie in V. 1.3",
@@ -320,6 +321,7 @@
     "small_bold": "klein und fett",
     "small_italic": "klein und kursiv",
     "smaller": "kleiner",
+    "SnippetEditor::Annotation": "Zusatz bearbeiten::Notenbeschriftung",
     "sorted": "sortiert",
     "specify all details for bar numbers": "Detaillierte Angaben zu Taktnummern",
     "specify all details for repeat signs": "Detaillierte Angaben\nzu Wiederholungszeichen",
@@ -346,14 +348,14 @@
     "startpos": "Startposition",
     "Stop": "Stop",
     "stringnames": "Saitennamen",
+    "Stringnames": "Saitennamen",
     "stringnames.full": "Saitennamen.detail",
     "style": "Stil",
     "subflowlines": "Hilfsmelodielinien",
-    "synchlines": "Synchroniationslinien",
-    "SnippetEditor::Annotation": "Zusatz bearbeiten::Anmerkung",
+    "synchlines": "Synchronisationslinien",
     "target to jump to": "Spruntziel",
     "templates": "Vorlagen",
-    "Text of annotation": "Text der Anmerkung",
+    "Text of annotation": "Text der Notenbeschriftung",
     "text": "Text",
     "text_color": "Textfarbe",
     "the name for the dreaggables of this note": "Name der Verschiebemarke dieser Note",
