#67 forms based editing
illustrate in the delete button if the entry exists in the configuration section

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -135,7 +135,7 @@
     "annotation": "Beschriftungsvorlage",
     "Annotation": "Notenbeschriftung",
     "annotations": "Beschriftungsvorlagen",
-    "autopos": "automatisch positionieren",
+    "autopos": "automat. positionieren",
     "barnumbers and countnotes": "Taktnummer und Zählmarken",
     "barnumbers": "Taktnummern",
     "barnumbers.full": "Taktnummern.detail",
