--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -25,7 +25,7 @@
     "annotation": "Beschriftungsvorlage",
     "Annotation": "Notenbeschriftung",
     "annotations": "Beschriftungsvorlagen",
-    "autopos": "automatisch positionieren",
+    "autopos": "automat. positionieren",
     "barnumbers and countnotes": "Taktnummer und Zählmarken",
     "barnumbers": "Taktnummern",
     "barnumbers.full": "Taktnummern.detail",
