--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -131,10 +131,9 @@
     "aligned": "aligned",
     "All": "Alle Fenster",
     "Annotation Ref": "Ref. Notenbeschriftung",
-    "annotation template": "Beschriftungsvorlage",
-    "annotation": "Beschriftungsvorlage",
-    "Annotation": "Notenbeschriftung",
-    "annotations": "Beschriftungsvorlagen",
+    "annotation": "Notenbeschriftung",
+    "Annotationxxx": "Notenbeschriftung",
+    "annotations": "Notenbeschriftungsvorlagen",
     "autopos": "automat. positionieren",
     "barnumbers and countnotes": "Taktnummer und Zählmarken",
     "barnumbers": "Taktnummern",
@@ -187,10 +186,10 @@
     "Edit configuration with forms": "Konfiguration in Bildschirmmasken bearbeiten",
     "Edit current extract": "Konfiguration des aktuellen Auszugs bearbeiten",
     "edit global settings for the current song": "Globale Einstellungen für das Musikstück bearibeten",
-    "Edit layouyt paerameters": "Layout-Parameter bearbeiten",
+    "Edit layout paerameters\nin current extract": "Layout-Parameter bearbeiten\nimaktuellen Auszug",
     "Edit presentation of stringanmes": "Darstellung der Saitennamen bearbeiten",
     "Edit printer correction paerameters": "Druckeranpassungen bearbeiten",
-    "edit settings for lyrics\nin current extract": "Einstellungen für Liedtexte bearbeiten",
+    "edit settings for lyrics\nin current extract": "Einstellungen für Liedtexte bearbeiten\nim aktuellen Auszug",
     "edit settings for sheet annotations\nin current extract": "Einstellungen für Seitenbeschriftung bearbeiten",
     "editor and harpnotes\napplicaple to tweak the notes for harp": "Zeige ABC und Harfennoten\ngeeignet zur Feinkorektur\nim Unterlegnotenblatt",
     "editor and notes\napplicable to enter notes": "Zeige ABC und Notendarstellung\ngeeignet zur Eingabe von Noten",
@@ -258,6 +257,8 @@
     "marks": "Saitenmarken",
     "medium view\nmost commonly used\nautoscroll works": "normale Größe\nmeistgenutzte Darstellunge\nautmatisches Scrollen\nfunktioniert",
     "medium": "normal",
+    "missing pos": "Positionsangabe fehlt",
+    "missing text": "Text fehlt",
     "MM_PER_POINT": "MM pro point",
     "Name of annotation": "Name der Beschriftungsvorlage",
     "Name of draggable": "Name der Verschiebemarke",
@@ -286,6 +287,10 @@
     "Play music": "Noten wiedergeben",
     "Play": "Play",
     "Please double check the generated sheets.\n\nYour abc file was automatically migrated\nto Zupfnoter version": "Bitte prüfe die erzeugten Noten.\n\nDie Eingabedatei wurde automatisch angepasst auf auf\nZupfnoter Version ",
+    "Please provide also followup-line": "Bitte gib auch einen Wert für die Folgelinie",
+    "Please provide also value for out-line": "Bitte gib auch einen wert für die Ausgangslinie",
+    "Please provide also X": "Bitte gib auch einen X-Wert zum Y-Wert an",
+    "Please provide also Y": "Bitte gib auch einen Y-Wert zum X-Wert an",
     "pos": "Position",
     "prefix": "Präfix",
     "Print A3 Harpnotes": "Harfennoten A3 drucken",
@@ -353,7 +358,7 @@
     "style": "Stil",
     "subflowlines": "Hilfsmelodielinien",
     "synchlines": "Synchronisationslinien",
-    "target to jump to": "Spruntziel",
+    "target to jump to": "Sprungziel",
     "templates": "Vorlagen",
     "Text of annotation": "Text der Notenbeschriftung",
     "text": "Text",
