#67 now we have a "new Entry" button for e.g. Lyrics and Notes

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -21,7 +21,7 @@
     "aligned": "aligned",
     "All": "Alle Fenster",
     "Annotation Ref": "Ref. Notenbeschriftung",
-    "annotation": "Notenbeschriftung",
+    "Annotation": "Notenbeschriftung",
     "annotations": "Notenbeschriftungsvorlagen",
     "autopos": "automat. positionieren",
     "barnumbers and countnotes": "Taktnummer und Zählmarken",
@@ -150,11 +150,13 @@
     "missing pos": "Positionsangabe fehlt",
     "missing text": "Text fehlt",
     "MM_PER_POINT": "MM pro point",
+    "more than one line found for ": "Mehr als eine Zeile gefunden für ",
     "Name of annotation": "Name der Beschriftungsvorlage",
     "Name of draggable": "Name der Verschiebemarke",
     "Name of target": "Name des Sprungziels",
     "neatjson": "JSON-Formatiuerng",
     "New": "Neu",
+    "New Entry": "Neuer Eintrag",
     "nonflowrest": "Begleitpausen",
     "notebound annotation": "Notenbezogene Beschriftung",
     "notebound": "Notenbezogen",
