updated typos in help while writing the manual

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -71,7 +71,7 @@
     "not in": "nicht in Liste",
     "Notification": "Nachricht",
     "of": "von",
-    "Ok": "Ok",
+    "Ok": "OK",
     "Open Search Fields": "Detailsuche öffnen",
     "Record ID": "Zeilen ID",
     "Records": "Zeilen",
@@ -317,7 +317,7 @@
     "Save ABC file in dropbox": "ABC-File in Dropbox öffnen",
     "set screen perspective": "Bildschirmansicht wählen",
     "shape": "Linienform",
-    "Shift": "links/rechts verschiebung",
+    "Shift": "links/rechts Verschiebung",
     "SHORTEST_NOTE": "kürzeste Note",
     "show all panes": "Zeigt alle Fenster an",
     "show_border": "Blattbegrenzg. zeichnen",
