--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -163,6 +163,7 @@
     "notes only": "Zeige nur die Noten",
     "Notes": "Noten",
     "notes": "Seitenbeschriftungen",
+    "Ok": "OK",
     "Open a demo sheet\n(Ich steh an deiner Kripen hier)": "Öffne ein neues\nZupfnoter-Fenster mit\neinem Demonstrationsstück\n(Ich steh an deiner Krippen hier)",
     "Open a new Zupfnoter window\nwith the reference page": "Öffne ein neues\nZupfnoter-Fenster mit\neiner Erklärung\nder Zupfnoter-Ausgabe",
     "Open ABC file in dropbox": "ABC-File in Dropbox öffnen",
@@ -209,7 +210,7 @@
     "Save": "Speichern",
     "set screen perspective": "Bildschirmansicht wählen",
     "shape": "Linienform",
-    "Shift": "links/rechts verschiebung",
+    "Shift": "links/rechts Verschiebung",
     "SHORTEST_NOTE": "kürzeste Note",
     "show all panes": "Zeigt alle Fenster an",
     "show_border": "Blattbegrenzg. zeichnen",
