--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -110,6 +110,12 @@
     "flowline": "Melodieliniexxx",
     "subflowline": "Hilfsmelodielinie",
     "create": "erzeugen",
+    "": "",
+    "0": "0",
+    "1": "1",
+    "2": "2",
+    "<div style=": "<div style=",
+    "<span id=": "<span id=",
     "A3": "A3",
     "a3_offset": "Offset für A3",
     "A4": "A4",
@@ -130,8 +136,10 @@
     "after_comma": "after_comma",
     "aligned": "aligned",
     "All": "Alle Fenster",
-    "Annotation Ref": "Ref. Notenbeschriftung",
+    "Ambiguous file number": "Dateinummer ist mehrdeutigr",
     "Annotation": "Notenbeschriftung",
+    "annotation": "Notenbeschriftung",
+    "AnnotationRef": "Ref. Notenbeschriftung",
     "annotations": "Notenbeschriftungsvorlagen",
     "autopos": "automat. positionieren",
     "barnumbers and countnotes": "Taktnummer und Zählmarken",
@@ -146,6 +154,7 @@
     "Configuration": "Konfiguration",
     "configure positioning of rests\ncompatible to version 1.3": "Pausen kompatibel zu version 1.3}",
     "configure your sheet": "Blatt konfigureren",
+    "could not open file": "konnte Datei nicht öffnen",
     "countnotes": "Zählmarken",
     "cp1": "Kontrollpunkt 1",
     "cp2": "Kontrollpunkt 2",
@@ -199,6 +208,7 @@
     "Enter Notes": "Noteneingabe",
     "Enter the title of your sheet": "Gib denTitel deines Musikstücks an",
     "err": "Fehler",
+    "Error from Dropbox with failed retries": "Fehler mit Dropbox (trotz wiederholter Versuche)",
     "Errors occurred": "Es sind Fehler aufgetreten",
     "explicit_sort": "**--explicit_sort",
     "Extract 0": "Auszug 0",
@@ -249,6 +259,7 @@
     "LINE_MEDIUM": "Linienstärke mittel",
     "LINE_THICK": "Linienstärke dick",
     "LINE_THIN": "Linienstärke dünn",
+    "logged out": "ausgeloggt",
     "Login in dropbox;\nchoose folder in Dropbox": "In Dropbox einloggen;\nOrdner in Dropbox wählen",
     "Login": "Einloggen",
     "lyrics": "Liedtexte",
@@ -264,8 +275,8 @@
     "Name of draggable": "Name der Verschiebemarke",
     "Name of target": "Name des Sprungziels",
     "neatjson": "JSON-Formatiuerng",
-    "New": "Neu",
     "New Entry": "Neuer Eintrag",
+    "New": "Neu",
     "nonflowrest": "Begleitpausen",
     "notebound annotation": "Notenbezogene Beschriftung",
     "notebound": "Notenbezogen",
@@ -315,9 +326,10 @@
     "rests as V 1.3": "Pausen wie in V. 1.3",
     "right": "rechts",
     "Save ABC file in dropbox": "ABC-File in Dropbox öffnen",
+    "saved to dropbox": "in Dropbox gespeichert",
     "set screen perspective": "Bildschirmansicht wählen",
     "shape": "Linienform",
-    "Shift": "links/rechts Verschiebung",
+    "Shifter": "links/rechts Verschiebung",
     "SHORTEST_NOTE": "kürzeste Note",
     "show all panes": "Zeigt alle Fenster an",
     "show_border": "Blattbegrenzg. zeichnen",
@@ -367,6 +379,7 @@
     "the name for the dreaggables of this note": "Name der Verschiebemarke dieser Note",
     "the name for this target": "Name des Sprunziels",
     "There is an error in the data you have entered": "Fehler in den eingegebenen Daten",
+    "There is no file with this id": "Es gibt keine Datei mit der Nummer",
     "title": "Titel",
     "Title": "Titel",
     "Tune": "Noten",
