--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -1,5 +1,12 @@
 {
   "phrases": {
+
+    "": "",
+    "0": "0",
+    "1": "1",
+    "2": "2",
+    "<div style=": "<div style=",
+    "<span id=": "<span id=",
     "A3": "A3",
     "a3_offset": "Offset für A3",
     "A4": "A4",
@@ -20,8 +27,10 @@
     "after_comma": "after_comma",
     "aligned": "aligned",
     "All": "Alle Fenster",
-    "Annotation Ref": "Ref. Notenbeschriftung",
+    "Ambiguous file number": "Dateinummer ist mehrdeutigr",
     "Annotation": "Notenbeschriftung",
+    "annotation": "Notenbeschriftung",
+    "AnnotationRef": "Ref. Notenbeschriftung",
     "annotations": "Notenbeschriftungsvorlagen",
     "autopos": "automat. positionieren",
     "barnumbers and countnotes": "Taktnummer und Zählmarken",
@@ -36,6 +45,7 @@
     "Configuration": "Konfiguration",
     "configure positioning of rests\ncompatible to version 1.3": "Pausen kompatibel zu version 1.3}",
     "configure your sheet": "Blatt konfigureren",
+    "could not open file": "konnte Datei nicht öffnen",
     "countnotes": "Zählmarken",
     "cp1": "Kontrollpunkt 1",
     "cp2": "Kontrollpunkt 2",
@@ -90,6 +100,7 @@
     "Enter Notes": "Noteneingabe",
     "Enter the title of your sheet": "Gib denTitel deines Musikstücks an",
     "err": "Fehler",
+    "Error from Dropbox with failed retries": "Fehler mit Dropbox (trotz wiederholter Versuche)",
     "Errors occurred": "Es sind Fehler aufgetreten",
     "explicit_sort": "**--explicit_sort",
     "Extract 0": "Auszug 0",
@@ -140,6 +151,7 @@
     "LINE_MEDIUM": "Linienstärke mittel",
     "LINE_THICK": "Linienstärke dick",
     "LINE_THIN": "Linienstärke dünn",
+    "logged out": "ausgeloggt",
     "Login in dropbox;\nchoose folder in Dropbox": "In Dropbox einloggen;\nOrdner in Dropbox wählen",
     "Login": "Einloggen",
     "lyrics": "Liedtexte",
@@ -155,8 +167,8 @@
     "Name of draggable": "Name der Verschiebemarke",
     "Name of target": "Name des Sprungziels",
     "neatjson": "JSON-Formatiuerng",
-    "New": "Neu",
     "New Entry": "Neuer Eintrag",
+    "New": "Neu",
     "nonflowrest": "Begleitpausen",
     "notebound annotation": "Notenbezogene Beschriftung",
     "notebound": "Notenbezogen",
@@ -208,9 +220,10 @@
     "right": "rechts",
     "Save ABC file in dropbox": "ABC-File in Dropbox öffnen",
     "Save": "Speichern",
+    "saved to dropbox": "in Dropbox gespeichert",
     "set screen perspective": "Bildschirmansicht wählen",
     "shape": "Linienform",
-    "Shift": "links/rechts Verschiebung",
+    "Shifter": "links/rechts Verschiebung",
     "SHORTEST_NOTE": "kürzeste Note",
     "show all panes": "Zeigt alle Fenster an",
     "show_border": "Blattbegrenzg. zeichnen",
@@ -260,6 +273,7 @@
     "the name for the dreaggables of this note": "Name der Verschiebemarke dieser Note",
     "the name for this target": "Name des Sprunziels",
     "There is an error in the data you have entered": "Fehler in den eingegebenen Daten",
+    "There is no file with this id": "Es gibt keine Datei mit der Nummer",
     "title": "Titel",
     "Title": "Titel",
     "Tune": "Noten",
